data/test/type_check/fail/assign_2.v
wire x;
assign x[3:1] = 0;
initial $finish;
